# board

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  index.html  install.sh  package-lock.json  package.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  store.rs  watch.rs
src/: App.css  App.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Composer.tsx  Editor.tsx  NoteCard.tsx
