[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kartik Ayalasomayajula"]
license = "MIT"

[workspace.dependencies]
board-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
slug = "0.1"
anyhow = "1"
thiserror = "1"
notify = "6"
directories = "5"
toml = "0.8"
