[package]
name = "board-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Local-first markdown notes storage engine shared by the GUI and CLI."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
slug = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
